--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>ANITAS KITCHEN</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="front">
+            <div class="logo">
+                <img src="images/logoBig (copy).png" alt="" height="200">
+            </div>
+            <div id="name">
+                <h1>We Provide The Best Food</h1>
+                <h1>At The <strong>Right Price</strong></h1>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
