--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
             </div>
         </div>
     </div>
+    <div class="range">
+        <div id="ball">
+            <p class="happytime">Happy Time</p>
+            <p class="partytime">Party Time</p>
+        </div>
+        <div id="breakfast">Breakfast</div>
+        <div id="lunch">Lunch</div>
+        <div id="dinner">Dinner</div>
+    </div>
 </body>
 </html>
