--- a/index.html
+++ b/index.html
@@ -28,6 +28,88 @@
         <div id="lunch">Lunch</div>
         <div id="dinner">Dinner</div>
     </div>
-    
-</body>
-</html>
+    <div class="main-content">
+      
+      <div class="food1">
+        <div class="food-images">
+          <img id="food-image1" src="./images/fastFood1.jpg"  alt="first mage displaying first food" />
+          <img id="food-image2" src="./images/fastFood2.jpg"  alt="second image displaying first food" />
+        </div>
+        <div class="food2">
+          <div class="fastfood" id="heading"><strong>Fast Food</strong></div>
+          <div class="food-caption" id="caption">You'll love our delicious fast food</div>
+          <div class="food3">
+            <p id="description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum
+              aspernatur dolorem debitis vitae, consequ untur corporis iste odio
+              quae necessitatibus distinctio iusto repudiandae nisi similique eos,
+              laborum numquam illum odit. Dignissimos!
+            </p>
+          </div>
+          <div class="viewgallery" id="gallery">
+            <strong>VIEW GALLERY</strong>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="drinks1">
+      <div class="drinks2">
+        <div class="drinksheading" id="heading"><strong>Drinks</strong></div>
+        <div class="drinks-message" id="messaging">
+          We also produce delicious drinks.
+        </div>
+        <div class="drinks3">
+          <p id="drinks4">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum
+            aspernatur dolorem debitis vitae, consequ untur corporis iste odio
+            quae necessitatibus distinctio iusto repudiandae nisi similique eos,
+            laborum numquam illum odit. Dignissimos!
+          </p>
+        </div>
+        <div class="viewdrinks" id="dgallery">
+          <strong>VIEW GALLERY</strong>
+        </div>
+      </div>
+      <div class="drinks-images">
+        <img id="drinks-image1" src="./images/drink1.jpg"/>
+        <img id="drinks-image2" src="./images/foodtop/dinner2.jpg"/>
+      </div>
+    </div>
+    <div class="foodnav">
+      <div class="slide1">
+        <div class="slider">
+          <div id="tab1"><strong>Fast Food</strong></div>
+          <div id="tab2"><strong>Drinks</strong></div>
+          <div id="tab3"><strong>Chicken</strong></div>
+          <div id="tab4"><strong>Rice</strong></div>
+        </div>
+        <div class="arrows">
+          <div class="leftarrow"><i class="left"></i></div>
+          <div class="chickenburger">
+            <img
+              id="burger-image"
+              src="./images/fastfood/chickenBurger.jpg"
+              alt="Chicken Burger"
+            />
+            <p id="chickenburger"><strong>Chicken Burger</strong></p>
+          </div>
+          <div class="beefburger">
+            <img
+              id="beef-image"
+              src="./images/fastfood/beefBurger.jpg"
+              alt="Beef Burger"
+            />
+            <p id="beefburger"><strong>Beef Burger</strong></p>
+          </div>
+          <div class="chickenpizza">
+            <img
+              id="pizza-image"
+              src="./images/fastfood/chickenPizza.jpg"
+              alt="Chicken Pizza"
+            />
+            <p id="chickenpizza"><strong>Chicken Pizza</strong></p>
+          </div>
+          <div class="rightarrow"><i class="right"></i></div>
+        </div>
+      </div>
+    </div>
