--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
       <div class="drinks-images">
         <img id="drinks-image1" src="./images/drink1.jpg"/>
-        <img id="drinks-image2" src="./images/foodtop/dinner2.jpg"/>
+        <img id="drinks-image2" src="./images/dinner2.jpg"/>
       </div>
     </div>
     <div class="foodnav">
@@ -113,3 +113,41 @@
         </div>
       </div>
     </div>
+    <div class="client-details">
+      <div class="client-info">
+        <div class="information">
+          <p><strong>Our Happy Customers</strong></p>
+        </div>
+        <div class="George"><strong>George Richard</strong></div>
+        <div class="feedback1">
+          <p>
+            Great food! Menu is awesome, their foods are not only great but<br />
+            also at the right price. I'll highly recommend them :)
+          </p>
+        </div>
+        <div class="pic1">
+          <div class="arrowleft"><i class="leftt"></i></div>
+          <div class="member1">
+            <img src="./images/customers/p1.png"/>
+          </div>
+          <div class="member2">
+            <img src="./images/customers/p2.png" />
+          </div>
+          <div class="member3">
+            <img src="./images/customers/p3.png"  />
+          </div>
+          <div class="arrowright"><i class="rightt"></i></div>
+        </div>
+      </div>
+      <div class="about-section"></div>
+      <div class="menu-about-us">
+        <div class="about"><strong>About Menu</strong></div>
+        <div class="about-comment">
+          <p>
+            We are a little team of 7 members. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Mollitia harum aperiam minima
+            laudantium vel, earum qui ratione doloribus,
+          </p>
+        </div>
+      </div>
+  </div>
