update css and html

--- a/index.html
+++ b/index.html
@@ -151,3 +151,24 @@
         </div>
       </div>
   </div>
+  <div id="enroll">
+    <div id="enroll-top">
+        <h3>Get our daily food items delivered to your email</h3>
+    </div>
+        <input type="text" placeholder="Your Email" id="email">
+        <button type="button" class="click">Subscribe</button>
+</div>
+<div id="statuss">
+    <div class="logoo">
+        <img src="images/logo_white.png" alt="">
+        <h1>MENU</h1>
+        <h5>Thats What We Are</h5>
+    </div>
+    <div id="socialmedia">
+        <img src="images/pinterest.png" alt="">
+        <img src="images/twitter.png" alt="">
+        <img src="images/facebook.png" alt="">
+        <h6>2021 Menu Restaurant</h6>
+        <h6>kitchen</h6>
+    </div>
+</div>
