--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
 </div>
 <div id="statuss">
     <div class="logoo">
-        <img src="images/logo_white.png" alt="">
+        <img src="images/footerlogos/logo_white.png" alt="">
         <h1>MENU</h1>
         <h5>Thats What We Are</h5>
     </div>
     <div id="socialmedia">
-        <img src="images/pinterest.png" alt="">
-        <img src="images/twitter.png" alt="">
-        <img src="images/facebook.png" alt="">
-        <h6>2021 Menu Restaurant</h6>
+        <img src="images/footerlogos/pinterest.png" alt="">
+        <img src="images/footerlogos/twitter.png" alt="">
+        <img src="images/footerlogos/facebook.png" alt="">
+        <div class="copyright">2020 Menu Restaurant</div>
         <h6>kitchen</h6>
     </div>
 </div>
